Add filetype html Twig support

--- a/config/geany/filetype_extensions.conf
+++ b/config/geany/filetype_extensions.conf
@@ -39,7 +39,7 @@
 #~ Groovy=*.groovy;*.gradle;
 #~ Haskell=*.hs;*.lhs;*.hs-boot;*.lhs-boot;
 #~ Haxe=*.hx;
-#~ HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;*.tpl;
+HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;*.tpl;*.html.twig;
 #~ Java=*.java;*.jsp;
 #~ Javascript=*.js;
 #~ JSON=*.json;
