Create custom filetype less base

--- a/config/geany/filetype_extensions.conf
+++ b/config/geany/filetype_extensions.conf
@@ -46,6 +46,7 @@ HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;*.tpl;*.html.twig;
 #~ Julia=*.jl;
 #~ Kotlin=*.kt;*.kts;
 #~ LaTeX=*.tex;*.sty;*.idx;*.ltx;*.latex;*.aux;
+LESS=*.less;
 #~ Lisp=*.lisp;
 #~ Lua=*.lua;
 #~ Make=*.mak;*.mk;GNUmakefile;makefile;Makefile;makefile.*;Makefile.*;
